<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, VODClientActivity!</string>
    <string name="app_name">SuperVod</string>
    <string name="copyright">Copyright  @  2012  STV</string>
	<string name="company">永新视博      All  Right  Reserved</string>
	<string name="confirm">确定</string>
	
    <!-- 详细节目信息页面 -->    
    <string name="detail_prg_name">节目名称: </string>
    <string name="detail_prg_desc">节目简介: \n</string>
    
    <string name="detail_btn_back">返回</string>
    <string name="detail_btn_point">我要评分</string>
    
    <string name="detail_btn_play">播放</string>
    <string name="detail_btn_fav">收藏</string>
    <string name="detail_btn_add">我的频道</string>
    
    <string name="detail_btn_sort">正序</string>
    <string name="detail_btn_rsort">反序</string>
    <string name="detail_btn_expand">展开</string>
    <string name="detail_btn_unexpand">收起</string>
    <string name="detail_txt_episode_number">剧集列表 共%d集</string>
    
    <string name="detail_txt_type">类型:</string>
    <string name="detail_txt_director">导演:</string>
    <string name="detail_txt_actor">主演:</string>
    <string name="detail_txt_starttime">开始时间:</string>
    <string name="detail_txt_singer">歌手:</string>
    <string name="detail_txt_desc">简介:</string>        
    <string name="detail_txt_point">分</string>  
    <string name="detail_txt_null">无.</string>    
    <string name="detail_txt_data_invaildate">获取详细信息失败</string>   
    <string name="detail_txt_addfav_ok">成功加入我的收藏</string>   
    <string name="detail_txt_addfav_error">加入我的收藏失败</string>   
    <string name="detail_txt_price">当前节目收费%s元，确定观看?</string> 
    <string name="detail_txt_addvod_ok">成功加入我的频道</string>
    <string name="detail_txt_addvod_error">加入我的频道失败:未知错误</string>
        
    <!-- framework add by zhaojunfeng -->    
    <string name="framework_tab_home">首页</string>  
    <string name="framework_tab_channel">分类</string> 
    <string name="framework_tab_search">搜索</string> 
    <string name="framework_tab_mychannel">我的频道</string> 
    <string name="framework_tab_more">更多</string>
    
    <string name="framework_dlg_title">提示</string>
    <string name="framework_dlg_content">确定要退出SuperVod客户端吗?</string>
    <string name="framework_dlg_btn_ok">确定</string>
    <string name="framework_dlg_btn_cancel">取消</string>
    
	<!-- add by mustang -->
	 
	<string name="vod_register">会员</string>
	<string name="vod_regist">注册</string>  
	<string name="vod_logout">注销</string>
	<string name="vod_email">请输入邮箱账号</string> 
	<string name="vod_smartcard">CA卡号: </string>
	<string name="welcome_city_qingzhou">山东青州</string>
	<string name="welcome_city_zhangzhou">福建漳州</string>   
	<string name="vod_id_number">身份证号:</string>
	<string name="vod_remember_password">记住密码</string>
	<string name="vod_register_reg">会员注册</string>
	<string name="vod_register_info">会员资料</string>
	<string name="vod_auto_login">自动登录</string>
	         
	<string name="vod_login">登录</string>
	<string name="vod_commit">提交</string>
	<string name="vod_username">用户名:</string>
	<string name="vod_password">密     码:</string>
	<string name="vod_my_city">我的城市:</string>
	<string name="vod_confirm_password">确认密码:</string>
	<string name="vod_register_login">会员登录</string>
	<string name="vod_password_type">密码类型:</string>
	<string name="vod_phone">手机号</string>
	<string name="vod_service_password">开户密码</string>
   
    <!-- further add by zhaojunfeng -->
    <string name="further_channel_title">更多</string>   
    <string name="further_interest_title">收藏</string>    
    <string name="further_bookmark_title">书签</string>
    <string name="further_help_title">帮助</string>
    <string name="further_about_title">关于</string>
    
	<string name="further_btn_back">返回</string>
    <string name="further_btn_edit">编辑</string>  
    <string name="further_btn_editok">完成</string> 
    <string name="further_btn_clear">清空</string>  
    <string name="further_btn_submit">提交</string>  
    <string name="further_txt_favinfo">共收藏了%d条记录</string> 
    <string name="further_dlg_title">提示</string> 
    <string name="further_dlg_delete_content">确定要删除这条记录吗？</string> 
    <string name="further_dlg_clear_content">确定要删除全部记录吗？</string> 
    <string name="further_dlg_play_bookmark_content">该节目存在播放记录，请选取播放位置</string> 
    <string name="further_btn_play_bookmark_new">从头开始</string> 
    <string name="further_btn_play_bookmark_curr">从当前位置开始</string> 

    
    <string name="further_txt_bookmarkinfo">共有%d条书签</string> 
    <string name="further_txt_getmore">释放载入更多</string>
    <string name="further_txt_loadingmore">正在加载...</string>
    <string name="further_txt_lesstime">观看小于1分钟</string>
    <string name="further_txt_moretime">观看至%d分钟</string>
    <string name="further_txt_overtime_item">节目已下线，资源不存在，删除该收藏节目</string>
    
    <!-- tvback add by zhaojunfeng -->
    <string name="tvback_title">频道列表</string> 
     
    <string name="mymovie_title">我的影片</string>
    <string name="mymtv_title">我的MTV</string>
    <string name="mymtv_repeat_title">请选择播放次数</string>
    <string name="mymtv_playmod_inorder">随机播放已关闭</string>
    <string name="mymtv_playmod_random">随机播放已打开</string>
    <string name="myvod_program_exist">该节目已经在我的频道列表中了</string>
    
	<!-- search add by ljn_alex -->
	<string name="search_btn_ok">搜索</string>
    
	<!-- hyt add  -->	
	<string name="connectFail">网络连接失败，找不到VOD服务器地址!</string>
	<string name="connectSuccess">网络连接成功</string>
	<string name="reconnect">重新连接</string>
	<string name="loginfail">登陆失败，连接不上VOD服务器，请检查网络连接后重试！</string>
	<string name="exit">退出登陆</string>
	<string name="relogin">重新登陆</string>
	<string name="stopPlay">停止</string>
	<item type="id" name="app_notification_id"></item>
	
	
	<!-- category add by ljn_alex -->
	<string name="category_type">按类型分类</string>
	<string name="category_area">按地区分类</string>
	<string name="category_order">排序方式</string>
	<string name="category_sequence">顺序选择</string>
	<string name="singer">歌手</string>
	<string name="hd">高清</string>
	<string name="canle">取消</string>
	<string name="ok">确定</string>
    <string name="tip">提示信息</string>
    <string name="loading">正在载入数据...</string>
	
	<!-- dialog info -->
	<string name="dlg_title_play_option">播放选项</string> 
	
	<!-- define error by zhaojunfeng -->
	<string name="system_err_id">未知错误，错误码 </string>
	
	<string name="system_err_10001">系统错误</string>
	<string name="system_err_10002">系统繁忙</string>
	<string name="system_err_10003">参数错误</string>
	<string name="system_err_10004">请求的HTTP方法不支持</string>
	<string name="system_err_10005">资源不存在</string>
	
	<string name="server_err_20001">用户名已存在</string>
	<string name="server_err_20002">CA卡号不存在</string>
	<string name="server_err_20003">手机号与CA卡号不匹配</string>
	<string name="server_err_20004">注册失败，未知错误</string>

	<string name="server_err_20101">用户名不存在</string>
	<string name="server_err_20102">用户名或者密码错误</string>
	<string name="server_err_20103">用户并没有登陆</string>
	
	<string name="server_err_20201">用户机顶盒不支持此视频格式</string>
	<string name="server_err_20202">数据库错误</string>
	<string name="server_err_20203">没有数据</string>
	
	<!-- myvod -->
	<string name="server_err_20301">传入不存在的ID</string>
	<string name="server_err_20302">节目数量超过限制</string>
	<string name="server_err_20303">节目总时长超过限制</string>
	<string name="server_err_20304">节目已经存在</string>
	<string name="server_err_20305">解析数据出错</string>
	
	<!--common error-->
    <string name="server_err_30001">网络连接出错,请检查网络设置</string>
    <string name="server_err_30002">连接不上服务器</string>
    <string name="server_err_30003">客户端解析数据出现异常</string>
    <string name="server_err_30004">发生未知错误</string>  
    
    <!-- help -->
    <string name="UserQuestion1">*使用SuperVod手机客户端点播可能产生哪些费用？</string>
    <string name="UserQuestion2">*使用SuperVod手机客户端点播视频时需要哪些网络条件？</string>
    <string name="UserQuestion3">*使用SuperVod手机客户端出现连接不上服务器或网络异常，该如何处理？</string>
    <string name="UserQuestion4">*使用SuperVod手机客户端遇到了问题或需求，该如何处理？</string>
    <string name="UserQuestion5">*在我的频道当中，该如何编辑我的影片或我的MTV？</string>
    <string name="UserQuestion6">*如果您已经点播了某部影片，退出了客户端，再次进入客户端该如何把播放器调出来？</string>
    <string name="UserAnswer1">    SuperVod手机版客户端完全免费使用，在使用过程中需要网络连接，因此可能产生一定的网络流量，相应的一切资费由网络运营商收取！我们建议您在有WIFI/3G的情况下使用！</string>
    <string name="UserAnswer2">    SuperVod手机客户端支持WIFI/3G/2G网络，由于点播的视频不在手机上播放，因此产生的流量相对较少，请用户放心使用！</string>
    <string name="UserAnswer3">    如果SuperVod手机客户端在您没有开启WIFI/3G/2G的时候，用户登录会出现连接不上服务器，您可以检查下手机网络设置；如果您在播放器中或浏览影片列表过程中出现用户无法登录以及网络连接失败、断开等异常情况，请您退出手机程序，再重新登录！</string>
    <string name="UserAnswer4">    我们一直希望给用户提供的是最好的服务体验，但是在这过程中可能我们的客户端还存在各种各样的问题以及不足，如果您在使用过程中，有任何问题、建议或需求，可以通过我们的官方网址（http://www.novel-supertv.com/）或打电话给当地客服进行问题反馈，也可以在我们发布程序的Android市场参与评论！</string>
    <string name="UserAnswer5">    &quot;我的频道&quot;是SuperVod手机客户端给用户自主选择影片播放的体验平台，通过“我的频道”用户可以进行连续播放想要观看的影片/MTV，如果您想要调整影片的顺序，可以点击&quot;编辑&quot;按钮，按住影片的图片，上下拖动，点击&quot;完成&quot;按钮，编辑成功，之后播放的影片就按照新的顺序播放！</string>
    <string name="UserAnswer6">    当您选择了一部影片播放之后，点击播放器中的&quot;返回&quot;按键，播放器隐藏到手机上方的通知栏中，当您退出客户端程序之后，电视上仍然继续播放影片；如果您再次进入SuperVod手机客户端，并且当前有影片在播放的时候，您再次点击通知栏中的内容就会调出播放器！</string>
    
</resources>